# mikmakpy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mikmakpy/: __init__.py  connection.py  constants.py  events.py  ingame.py  login.py  protocol.py
tests/: login_test.py  protocol_test.py
