[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikmakpy"
version = "0.0.1"
description = "A Python client library for interacting with the MikMak 1 game protocol"
readme = "README.md"
authors = [{ name = "Isaac Aber", email = "isaacabermail@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["mikmak", "protocol", "automation"]
dependencies = [
    
]
requires-python = ">=3.14"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/IsaacAber/mikmakpy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mikmakpy*"]
exclude = ["tests*"]